crates/pixi_config/tests/snapshots/compat__parse__override-layer.toml.snap
---
source: crates/pixi_config/tests/compat.rs
expression: "(unused, normalized(config))"
---
(
    {},
    Config {
        inner: ConfigBase {
            common: CommonConfig {
                default_channels: Some(
                    [
                        Name(
                            "robostack",
                        ),
                    ],
                ),
                authentication_override_file: None,
                tls_no_verify: Some(
                    true,
                ),
                tls_root_certs: None,
                mirrors: {
                    Url {
                        scheme: "https",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: Some(
                            Domain(
                                "conda.anaconda.org",
                            ),
                        ),
                        port: None,
                        path: "/bioconda",
                        query: None,
                        fragment: None,
                    }: [
                        Url {
                            scheme: "https",
                            cannot_be_a_base: false,
                            username: "",
                            password: None,
                            host: Some(
                                Domain(
                                    "prefix.dev",
                                ),
                            ),
                            port: None,
                            path: "/bioconda",
                            query: None,
                            fragment: None,
                        },
                    ],
                },
                build: BuildConfig {
                    package_format: None,
                },
                channel_config: ChannelConfig {
                    channel_alias: Url {
                        scheme: "https",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: Some(
                            Domain(
                                "conda.anaconda.org",
                            ),
                        ),
                        port: None,
                        path: "/",
                        query: None,
                        fragment: None,
                    },
                    root_dir: "/root/dir",
                },
                repodata_config: RepodataConfig {
                    default: RepodataChannelConfig {
                        disable_bzip2: Some(
                            false,
                        ),
                        disable_zstd: None,
                        disable_sharded: None,
                    },
                    per_channel: {
                        Url {
                            scheme: "https",
                            cannot_be_a_base: false,
                            username: "",
                            password: None,
                            host: Some(
                                Domain(
                                    "prefix.dev",
                                ),
                            ),
                            port: None,
                            path: "/",
                            query: None,
                            fragment: None,
                        }: RepodataChannelConfig {
                            disable_bzip2: None,
                            disable_zstd: Some(
                                true,
                            ),
                            disable_sharded: None,
                        },
                    },
                },
                concurrency: ConcurrencyConfig {
                    solves: 0,
                    downloads: 50,
                },
                proxy_config: ProxyConfig {
                    https: None,
                    http: None,
                    non_proxy_hosts: [],
                },
                s3_options: S3OptionsMap(
                    {
                        "other-bucket": S3Options {
                            endpoint_url: Url {
                                scheme: "https",
                                cannot_be_a_base: false,
                                username: "",
                                password: None,
                                host: Some(
                                    Domain(
                                        "minio.example.com",
                                    ),
                                ),
                                port: None,
                                path: "/",
                                query: None,
                                fragment: None,
                            },
                            region: "auto",
                            force_path_style: false,
                        },
                    },
                ),
                index_config: IndexConfig {
                    default: IndexChannelConfig {
                        write_zst: None,
                        write_shards: None,
                        repodata_revisions: None,
                        package_revision_assignment: None,
                        base_url: None,
                        channel_relations: None,
                    },
                    per_channel: {},
                },
                run_post_link_scripts: None,
                allow_symbolic_links: None,
                allow_hard_links: None,
                allow_ref_links: None,
            },
            extensions: PixiConfig {
                offline: Some(
                    true,
                ),
                pinning_strategy: Some(
                    Semver,
                ),
                pypi_config: PyPIConfig {
                    index_url: Some(
                        Url {
                            scheme: "https",
                            cannot_be_a_base: false,
                            username: "",
                            password: None,
                            host: Some(
                                Domain(
                                    "test.pypi.org",
                                ),
                            ),
                            port: None,
                            path: "/simple",
                            query: None,
                            fragment: None,
                        },
                    ),
                    extra_index_urls: [
                        Url {
                            scheme: "https",
                            cannot_be_a_base: false,
                            username: "",
                            password: None,
                            host: Some(
                                Domain(
                                    "extra.example.com",
                                ),
                            ),
                            port: None,
                            path: "/simple",
                            query: None,
                            fragment: None,
                        },
                    ],
                    keyring_provider: None,
                    allow_insecure_host: [],
                },
                detached_environments: Some(
                    Boolean(
                        false,
                    ),
                ),
                shell: ShellConfig {
                    force_activate: None,
                    source_completion_scripts: None,
                    change_ps1: Some(
                        true,
                    ),
                },
                experimental: ExperimentalConfig {
                    use_environment_activation_cache: Some(
                        false,
                    ),
                },
                tool_platform: Some(
                    OsxArm64,
                ),
                cache: CacheConfig {
                    root: Some(
                        "/other/pixi/cache",
                    ),
                    conda_packages: None,
                    repodata: None,
                    pypi_wheels: None,
                    pypi_mapping: None,
                    exec_environments: None,
                    build_tool_environments: None,
                    detached_environments: None,
                    netfs_redirect: Always,
                },
                change_ps1: None,
                force_activate: None,
            },
            loaded_from: [],
        },
    },
)
